tests/snapshots/errors/undefined_struct.mc
let p = Unknown { x: 10 };
